// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test comments issues fix #55 1`] = `
Program {
  "children": Array [
    If {
      "alternate": null,
      "body": Block {
        "children": Array [
          If {
            "alternate": null,
            "body": Block {
              "children": Array [],
              "kind": "block",
              "leadingComments": Array [
                CommentLine {
                  "kind": "commentline",
                  "value": "// inner statements
",
                },
              ],
            },
            "kind": "if",
            "shortForm": true,
            "test": Boolean {
              "kind": "boolean",
              "raw": "true",
              "value": true,
            },
            "trailingComments": Array [
              CommentLine {
                "kind": "commentline",
                "value": "// another comment
",
              },
            ],
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": true,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
      "trailingComments": Array [
        CommentLine {
          "kind": "commentline",
          "value": "// 2nd comment
",
        },
      ],
    },
  ],
  "comments": Array [
    CommentLine {
      "kind": "commentline",
      "value": "// inner statements
",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// another comment
",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// 2nd comment
",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test comments issues fix #126 : new option 1`] = `
Program {
  "children": Array [
    If {
      "alternate": If {
        "alternate": null,
        "body": Block {
          "children": Array [
            ExpressionStatement {
              "expression": Assign {
                "kind": "assign",
                "left": Variable {
                  "byref": false,
                  "curly": false,
                  "kind": "variable",
                  "name": "a",
                },
                "operator": "=",
                "right": Number {
                  "kind": "number",
                  "trailingComments": Array [
                    CommentBlock {
                      "kind": "commentblock",
                      "value": "/* trailing 2 */",
                    },
                  ],
                  "value": "2",
                },
              },
              "kind": "expressionstatement",
              "trailingComments": Array [
                CommentLine {
                  "kind": "commentline",
                  "value": "// trailing assing
",
                },
              ],
            },
          ],
          "kind": "block",
          "trailingComments": Array [
            CommentLine {
              "kind": "commentline",
              "value": "// trailing elseif
",
            },
          ],
        },
        "kind": "if",
        "shortForm": false,
        "test": Boolean {
          "kind": "boolean",
          "raw": "false",
          "value": false,
        },
      },
      "body": Block {
        "children": Array [
          ExpressionStatement {
            "expression": Assign {
              "kind": "assign",
              "left": Variable {
                "byref": false,
                "curly": false,
                "kind": "variable",
                "name": "a",
              },
              "operator": "=",
              "right": Number {
                "kind": "number",
                "value": "1",
              },
            },
            "kind": "expressionstatement",
          },
        ],
        "kind": "block",
        "trailingComments": Array [
          CommentLine {
            "kind": "commentline",
            "value": "// Don't parsed :(
",
          },
        ],
      },
      "kind": "if",
      "shortForm": false,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
  ],
  "comments": Array [
    CommentLine {
      "kind": "commentline",
      "value": "// Don't parsed :(
",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* trailing 2 */",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// trailing assing
",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// trailing elseif
",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test comments issues fix #189 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Bin {
          "kind": "bin",
          "left": Bin {
            "kind": "bin",
            "left": String {
              "isDoubleQuote": false,
              "kind": "string",
              "raw": "'string1'",
              "trailingComments": Array [
                CommentLine {
                  "kind": "commentline",
                  "value": "// Comment 1
",
                },
              ],
              "unicode": false,
              "value": "string1",
            },
            "right": String {
              "isDoubleQuote": false,
              "kind": "string",
              "raw": "'string2'",
              "trailingComments": Array [
                CommentLine {
                  "kind": "commentline",
                  "value": "// Comment 2
",
                },
                CommentLine {
                  "kind": "commentline",
                  "value": "// Comment 3
",
                },
              ],
              "unicode": false,
              "value": "string2",
            },
            "type": ".",
          },
          "right": String {
            "isDoubleQuote": false,
            "kind": "string",
            "raw": "'string3'",
            "unicode": false,
            "value": "string3",
          },
          "type": ".",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "comments": Array [
    CommentLine {
      "kind": "commentline",
      "value": "// Comment 1
",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// Comment 2
",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// Comment 3
",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test comments issues fix #193 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
        "operator": "=",
        "right": Call {
          "arguments": Array [],
          "kind": "call",
          "what": PropertyLookup {
            "kind": "propertylookup",
            "offset": Identifier {
              "kind": "identifier",
              "leadingComments": Array [
                CommentLine {
                  "kind": "commentline",
                  "value": "// Comment After
",
                },
              ],
              "name": "each",
            },
            "what": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "var",
              "trailingComments": Array [
                CommentLine {
                  "kind": "commentline",
                  "value": "// Comment Before
",
                },
              ],
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "comments": Array [
    CommentLine {
      "kind": "commentline",
      "value": "// Comment Before
",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// Comment After
",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test comments issues impl #194 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "foo",
          "trailingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "value": "/* trail foo */",
            },
          ],
        },
        "operator": "=",
        "right": Number {
          "kind": "number",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "value": "/* lead 1 */",
            },
          ],
          "trailingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "value": "/* trail 1 */",
            },
          ],
          "value": "1",
        },
      },
      "kind": "expressionstatement",
      "leadingComments": Array [
        CommentLine {
          "kind": "commentline",
          "value": "// lead assign
",
        },
      ],
      "trailingComments": Array [
        CommentLine {
          "kind": "commentline",
          "value": "// lead call
",
        },
      ],
    },
    Call {
      "arguments": Array [
        String {
          "isDoubleQuote": true,
          "kind": "string",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "value": "/* lead arg */",
            },
          ],
          "raw": "\\"arg\\"",
          "trailingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "value": "/* trail arg */",
            },
          ],
          "unicode": false,
          "value": "arg",
        },
      ],
      "kind": "call",
      "trailingComments": Array [
        CommentBlock {
          "kind": "commentblock",
          "value": "/* trail call */",
        },
      ],
      "what": Reference {
        "kind": "reference",
        "name": "callback",
        "resolution": "uqn",
      },
    },
  ],
  "comments": Array [
    CommentLine {
      "kind": "commentline",
      "value": "// lead assign
",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* trail foo */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* lead 1 */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* trail 1 */",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// lead call
",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* lead arg */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* trail arg */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* trail call */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* trail program */",
    },
  ],
  "errors": Array [],
  "kind": "program",
  "trailingComments": Array [
    CommentBlock {
      "kind": "commentblock",
      "value": "/* trail program */",
    },
  ],
}
`;

exports[`Test comments multi line comments test function 1`] = `
Program {
  "children": Array [
    _Function {
      "arguments": Array [
        Parameter {
          "byref": false,
          "kind": "parameter",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "value": "/* @var something */",
            },
          ],
          "name": "arg",
          "nullable": false,
          "type": null,
          "value": null,
          "variadic": false,
        },
      ],
      "body": Block {
        "children": Array [
          Return {
            "expr": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "arg",
              "trailingComments": Array [
                CommentBlock {
                  "kind": "commentblock",
                  "value": "/* ignore */",
                },
              ],
            },
            "kind": "return",
            "leadingComments": Array [
              CommentLine {
                "kind": "commentline",
                "value": "// inner
",
              },
            ],
          },
        ],
        "kind": "block",
      },
      "byref": true,
      "kind": "function",
      "leadingComments": Array [
        CommentBlock {
          "kind": "commentblock",
          "value": "/**
         * Description
         */",
        },
      ],
      "name": Identifier {
        "kind": "identifier",
        "leadingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "value": "/* ignore */",
          },
          CommentBlock {
            "kind": "commentblock",
            "value": "/* ignore */",
          },
        ],
        "name": "name",
      },
      "nullable": false,
      "type": null,
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "value": "/**
         * Description
         */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* @var something */",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// inner
",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test comments multi line comments test if statements 1`] = `
Program {
  "children": Array [
    If {
      "alternate": If {
        "alternate": If {
          "alternate": Block {
            "children": Array [],
            "kind": "block",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "value": "/* ignore */",
              },
            ],
          },
          "body": Block {
            "children": Array [],
            "kind": "block",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "value": "/* ignore */",
              },
              CommentBlock {
                "kind": "commentblock",
                "value": "/* ignore */",
              },
            ],
            "trailingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "value": "/* ignore */",
              },
            ],
          },
          "kind": "if",
          "shortForm": false,
          "test": Boolean {
            "kind": "boolean",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "value": "/* ignore */",
              },
              CommentBlock {
                "kind": "commentblock",
                "value": "/* ignore */",
              },
            ],
            "raw": "false",
            "value": false,
          },
        },
        "body": Block {
          "children": Array [],
          "kind": "block",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "value": "/* ignore */",
            },
          ],
          "trailingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "value": "/* ignore */",
            },
          ],
        },
        "kind": "if",
        "leadingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "value": "/* ignore */",
          },
          CommentLine {
            "kind": "commentline",
            "value": "// else with a inner if single statement :
",
          },
        ],
        "shortForm": false,
        "test": Boolean {
          "kind": "boolean",
          "raw": "true",
          "value": true,
        },
      },
      "body": Block {
        "children": Array [],
        "kind": "block",
        "leadingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "value": "/* ignore */",
          },
        ],
        "trailingComments": Array [
          CommentLine {
            "kind": "commentline",
            "value": "# inner statement
",
          },
          CommentBlock {
            "kind": "commentblock",
            "value": "/* ignore */",
          },
        ],
      },
      "kind": "if",
      "shortForm": false,
      "test": Boolean {
        "kind": "boolean",
        "leadingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "value": "/* ignore */",
          },
          CommentBlock {
            "kind": "commentblock",
            "value": "/* */",
          },
        ],
        "raw": "true",
        "value": true,
      },
    },
    If {
      "alternate": null,
      "body": Block {
        "children": Array [],
        "kind": "block",
        "leadingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "value": "/* ignore */",
          },
          CommentBlock {
            "kind": "commentblock",
            "value": "/* ignore */",
          },
          CommentBlock {
            "kind": "commentblock",
            "value": "/* ignore */",
          },
        ],
      },
      "kind": "if",
      "shortForm": true,
      "test": Boolean {
        "kind": "boolean",
        "raw": "false",
        "value": false,
      },
      "trailingComments": Array [
        CommentBlock {
          "kind": "commentblock",
          "value": "/* ignore */",
        },
        CommentBlock {
          "kind": "commentblock",
          "value": "/* ignore */",
        },
      ],
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentLine {
      "kind": "commentline",
      "value": "# inner statement
",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// else with a inner if single statement :
",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test comments multi line comments test try statements 1`] = `
Program {
  "children": Array [
    Try {
      "always": Block {
        "children": Array [],
        "kind": "block",
        "leadingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "value": "/* yy */",
          },
        ],
        "trailingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "value": "/* ignore */",
          },
          CommentLine {
            "kind": "commentline",
            "value": "// end
",
          },
        ],
      },
      "body": Block {
        "children": Array [],
        "kind": "block",
        "leadingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "value": "/* ignore */",
          },
        ],
        "trailingComments": Array [
          CommentLine {
            "kind": "commentline",
            "value": "# inner statement
",
          },
          CommentBlock {
            "kind": "commentblock",
            "value": "/* dd */",
          },
        ],
      },
      "catches": Array [
        Catch {
          "body": Block {
            "children": Array [],
            "kind": "block",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "value": "/* dd */",
              },
            ],
            "trailingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "value": "/* ee */",
              },
              CommentBlock {
                "kind": "commentblock",
                "value": "/* zz */",
              },
            ],
          },
          "kind": "catch",
          "variable": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "e",
            "trailingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "value": "/* bb */",
              },
            ],
          },
          "what": Array [
            Reference {
              "kind": "reference",
              "leadingComments": Array [
                CommentBlock {
                  "kind": "commentblock",
                  "value": "/* zz */",
                },
              ],
              "name": "\\\\Exception",
              "resolution": "qn",
              "trailingComments": Array [
                CommentBlock {
                  "kind": "commentblock",
                  "value": "/* 1 */",
                },
              ],
            },
            Reference {
              "kind": "reference",
              "leadingComments": Array [
                CommentBlock {
                  "kind": "commentblock",
                  "value": "/* 2 */",
                },
              ],
              "name": "\\\\Foo",
              "resolution": "qn",
              "trailingComments": Array [
                CommentBlock {
                  "kind": "commentblock",
                  "value": "/* aa */",
                },
              ],
            },
          ],
        },
      ],
      "kind": "try",
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentLine {
      "kind": "commentline",
      "value": "# inner statement
",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* dd */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* zz */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* 1 */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* 2 */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* aa */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* bb */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* dd */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ee */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* zz */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* yy */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// end
",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test comments test classes 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        Property {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "property",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "value": "/* ignore */",
            },
            CommentBlock {
              "kind": "commentblock",
              "value": "/* hehe */",
            },
            CommentLine {
              "kind": "commentline",
              "value": "// @var test
",
            },
          ],
          "name": "test",
          "value": null,
          "visibility": "protected",
        },
        Property {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "property",
          "name": "toto",
          "value": null,
          "visibility": "protected",
        },
        Property {
          "isAbstract": false,
          "isFinal": false,
          "isStatic": true,
          "kind": "property",
          "leadingComments": Array [
            CommentLine {
              "kind": "commentline",
              "value": "// ignored comment
",
            },
            CommentBlock {
              "kind": "commentblock",
              "value": "/** @var Class */",
            },
          ],
          "name": "foo",
          "value": Number {
            "kind": "number",
            "value": "123",
          },
          "visibility": "public",
        },
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "value": "/** ignored also **/",
            },
            CommentBlock {
              "kind": "commentblock",
              "value": "/**
          * @return void
          */",
            },
          ],
          "name": Identifier {
            "kind": "identifier",
            "name": "void",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "leadingComments": Array [
        CommentBlock {
          "kind": "commentblock",
          "value": "/**
       * Description
       */",
        },
      ],
      "name": "name",
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "value": "/**
       * Description
       */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* ignore */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* hehe */",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// @var test
",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// ignored comment
",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/** @var Class */",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/** ignored also **/",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/**
          * @return void
          */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test comments test single line comments 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "operator": "=",
        "right": Number {
          "kind": "number",
          "trailingComments": Array [
            CommentLine {
              "kind": "commentline",
              "value": "// 123
",
            },
          ],
          "value": "123",
        },
      },
      "kind": "expressionstatement",
      "leadingComments": Array [
        CommentLine {
          "kind": "commentline",
          "value": "# some information
",
        },
        CommentLine {
          "kind": "commentline",
          "value": "// another line
",
        },
      ],
      "trailingComments": Array [
        CommentBlock {
          "kind": "commentblock",
          "value": "/* done */",
        },
      ],
    },
  ],
  "comments": Array [
    CommentLine {
      "kind": "commentline",
      "value": "# some information
",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// another line
",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// 123
",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/* done */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
